fix refund tempalte
Signed-off-by: inge4pres <fgualazzi@gmail.com>

--- a/.github/ISSUE_TEMPLATE/refund.yaml
+++ b/.github/ISSUE_TEMPLATE/refund.yaml
@@ -16,7 +16,7 @@ body:
   - type: textarea
     id: email
     attributes:
-      description: Your email.
+      label: Your email.
       placeholder: myself@mail.to
     validations:
       required: true
